chore(docs): Fix scrollbars being visible always.

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -82,3 +82,9 @@ body {
 .docs-md__code, .docs-overflow-x-scroll {
   overflow-x: auto;
 }
+
+@media (min-width: 768px) {
+  .md\:docs-overflow-y-scroll {
+    overflow-y: auto;
+  }
+}
